# Underwater-navigation-for-legged-robots

./: .gitignore  AGENTS.md  frame.md  requirements.txt
aquatic_traj/: command.md  command.txt  okvis_vio.txt  silver2_odometry.tum
aquatic_traj/vio_result0/: metadata.yaml
bags/: okvis_vio.txt
silver2_stonefish/: README.md
silver2_stonefish/src/stonefish_silver/: CMakeLists.txt  package.xml
silver2_stonefish/src/stonefish_silver/config/: controllers.yaml
silver2_stonefish/src/stonefish_silver/data/: coral_agaricia.mtl  rock_pile.mtl
silver2_stonefish/src/stonefish_silver/launch/: silver_simulation.launch.py
silver2_stonefish/src/stonefish_silver/scenarios/: robot.scn  simulation.scn  simulation_2.scn
silver2_stonefish/src/stonefish_silver/scripts/: cmd_vel_control_rotation.py  okvis_pose_to_cmd_vel.py  robot_def.py
tools/: lift_single_leg.py  measure_stereo_offset.py  monitor_image_encoding.py
